--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <nav>
-        <div class="nav__logo">
-            Ramadan Masoud
-        </div>
+        <a href="./index.html">
+            <div class="nav__logo">
+                Ramadan Masoud
+            </div>
+        </a>
 
         <div class="nav__links">
             <a href="#">Home</a>
@@ -165,8 +167,8 @@
                 </div>
 
                 <div class="footer__icons">
-                    <a href="#"><i class="ri-facebook-box-fill"></i></a>
-                    <a href="#"><i class="ri-linkedin-fill"></i></i></a>
+                    <a href="https://www.facebook.com/rmdan.ms.wd.238407"><i class="ri-facebook-box-fill"></i></a>
+                    <a href="www.linkedin.com/in/رمضان-مسعود-19aa802bb"><i class="ri-linkedin-fill"></i></i></a>
                     <a href="#"><i class="ri-instagram-line"></i></a>
 
                 </div>
