--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
                 <div class="footer__icons">
                     <a href="https://www.facebook.com/rmdan.ms.wd.238407"><i class="ri-facebook-box-fill"></i></a>
-                    <a href="www.linkedin.com/in/رمضان-مسعود-19aa802bb"><i class="ri-linkedin-fill"></i></i></a>
+                    <a href="http://linkedin.com/in/رمضان-مسعود-19aa802bb"><i class="ri-linkedin-fill"></i></i></a>
                     <a href="#"><i class="ri-instagram-line"></i></a>
 
                 </div>
@@ -181,3 +181,4 @@
         </footer>
 </body>
 </html>
+
