--- a/index.html
+++ b/index.html
@@ -1,184 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assest/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio of Ramadan Masoud, showcasing web development projects in HTML, CSS, JavaScript, and responsive design."
+    />
+    <meta
+      name="keywords"
+      content="Ramadan Masoud, Web Developer, Portfolio, HTML CSS Projects, Frontend Developer"
+    />
+    <meta name="author" content="Ramadan Masoud" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
+      integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./assest/css/style.css" />
     <title>Home | Ramadan Masoud</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <a href="./index.html">
-            <div class="nav__logo">
-                Ramadan Masoud
-            </div>
-        </a>
+      <a href="./index.html">
+        <div class="nav__logo">Ramadan Masoud</div>
+      </a>
 
-        <div class="nav__links">
-            <a href="#">Home</a>
-            <a href="#">Features</a>
-            <a href="#">Blog</a>
-            <a href="#">About Us</a>
-        </div>
+      <div class="nav__links">
+        <a href="#">Home</a>
+        <a href="#">Features</a>
+        <a href="#">Blog</a>
+        <a href="#">About Us</a>
+      </div>
 
-        <div class="buttons">
-            <button class="sign__up">Get Started</button>
-            <button class="login">Login</button>
-        </div>
-        <i class="ri-menu-line"></i>
+      <div class="buttons">
+        <button class="sign__up">Get Started</button>
+        <button class="login">Login</button>
+      </div>
+      <i class="ri-menu-line"></i>
     </nav>
 
     <header class="header">
-        <div class="left__section">
-            <h1>Lets Buy Some <span>RamadanGraph</span></h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, aut!</p>
-            <button><i class="ri-shopping-cart-line"></i>Byu Now</button>
-        </div>
-        <img src="./assest/img/header.png" alt="header img">
+      <div class="left__section">
+        <h1>Lets Buy Some <span>RamadanGraph</span></h1>
+        <p>
+          Discover unique, collectible RamadanGraph NFTs—crafted for true
+          crypto-art enthusiasts.”
+        </p>
+        <button><i class="ri-shopping-cart-line"></i>Buy Now</button>
+      </div>
+      <img src="./assest/img/header.png" alt="header img" />
     </header>
 
     <section class="sell">
-        <h2>Sell Your NFTs</h2>
-        <div class="cards">
-            <div class="card">
-                <h3><i class="ri-wallet-line"></i>Connect Wallet</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic laboriosam nemo assumenda itaque id tenetur.</p>
-            </div>
-
-            <div class="card">
-                <h3><i class="ri-wallet-line"></i>Connect Wallet</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic laboriosam nemo assumenda itaque id tenetur.</p>
-            </div>
-
-            <div class="card">
-                <h3><i class="ri-wallet-line"></i>Connect Wallet</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic laboriosam nemo assumenda itaque id tenetur.</p>
-            </div>
+      <h2>Sell Your NFTs</h2>
+      <div class="cards">
+        <div class="card">
+          <h3><i class="ri-wallet-line"></i>Connect Wallet</h3>
+          <p>
+            Securely connect your wallet to browse, bid, and collect exclusive
+            RamadanGraph NFTs.
+          </p>
         </div>
+
+        <div class="card">
+          <h3><i class="ri-wallet-line"></i>NFT Marketplace</h3>
+          <p>
+            Explore a vibrant NFT marketplace where artists and collectors meet
+            to trade unique digital assets.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3><i class="ri-wallet-line"></i>Launch DApps</h3>
+          <p>
+            Launch powerful decentralized apps (DApps) directly from your wallet
+            for seamless blockchain experiences.
+          </p>
+        </div>
+      </div>
     </section>
 
     <section class="super">
-        <h2>Super Hot NFTs</h2>
-        <div class="tabs">
-            <a href="#">RamadanGraph</a>
-            <a href="#">Abstract</a>
-            <a href="#">Monkey</a>
-            <a href="#">Cars</a>
-            <a href="#">Trending</a>
+      <h2>Super Hot NFTs</h2>
+      <div class="tabs">
+        <a href="#">RamadanGraph</a>
+        <a href="#">Abstract</a>
+        <a href="#">Monkey</a>
+        <a href="#">Cars</a>
+        <a href="#">Trending</a>
+      </div>
+
+      <div class="cards">
+        <div class="card">
+          <img src="./assest/img/item-1.png" alt="card image" />
+          <h3>CryptoArt</h3>
+          <div class="price">
+            <i class="ri-btc-line"></i>0.29 <span>BTC</span>
+          </div>
+          <hr />
+
+          <div class="card__bottom">
+            <div class="time">2h 28m 1s</div>
+            <div class="bid">Place a bid</div>
+          </div>
         </div>
 
-        <div class="cards">
-            <div class="card">
-                <img src="./assest/img/item-1.png" alt="card image">
-                <h3>CryptoArt</h3>
-                <div class="price"><i class="ri-btc-line"></i>0.29 <span>BTC</span></div>
-                <hr>
-
-                <div class="card__bottom">
-                    <div class="time">2h 28m 1s</div>
-                    <div class="bid">Place a bid</div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assest/img/item-2.png" alt="card image">
-                <h3>CryptoArt</h3>
-                <div class="price"><i class="ri-btc-line"></i>0.29 <span>BTC</span></div>
-                <hr>
-                <div class="card__bottom">
-                    <div class="time">2h 28m 1s</div>
-                    <div class="bid">Place a bid</div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assest/img/item-3.png" alt="card image">
-                <h3>CryptoArt</h3>
-                <div class="price"><i class="ri-btc-line"></i>0.29 <span>BTC</span></div>
-                <hr>
-
-                <div class="card__bottom">
-                    <div class="time">2h 28m 1s</div>
-                    <div class="bid">Place a bid</div>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assest/img/item-4.png" alt="card image">
-                <h3>CryptoArt</h3>
-                <div class="price"><i class="ri-btc-line"></i>0.29 <span>BTC</span></div>
-                <hr>
-
-                <div class="card__bottom">
-                    <div class="time">2h 28m 1s</div>
-                    <div class="bid">Place a bid</div>
-                </div>
-            </div>
+        <div class="card">
+          <img src="./assest/img/item-2.png" alt="card image" />
+          <h3>Abs-Art</h3>
+          <div class="price">
+            <i class="ri-btc-line"></i>0.29 <span>BTC</span>
+          </div>
+          <hr />
+          <div class="card__bottom">
+            <div class="time">2h 28m 1s</div>
+            <div class="bid">Place a bid</div>
+          </div>
         </div>
-        <div class="button">
-            <button>View More</button>
+
+        <div class="card">
+          <img src="./assest/img/item-3.png" alt="card image" />
+          <h3>TestArt</h3>
+          <div class="price">
+            <i class="ri-btc-line"></i>0.29 <span>BTC</span>
+          </div>
+          <hr />
+
+          <div class="card__bottom">
+            <div class="time">2h 28m 1s</div>
+            <div class="bid">Place a bid</div>
+          </div>
         </div>
+
+        <div class="card">
+          <img src="./assest/img/item-4.png" alt="card image" />
+          <h3>Art-4</h3>
+          <div class="price">
+            <i class="ri-btc-line"></i>0.29 <span>BTC</span>
+          </div>
+          <hr />
+
+          <div class="card__bottom">
+            <div class="time">2h 28m 1s</div>
+            <div class="bid">Place a bid</div>
+          </div>
+        </div>
+      </div>
+      <div class="button">
+        <button>View More</button>
+      </div>
     </section>
 
     <section class="best__sellers">
-        <h2>Best Sellers</h2>
-        <div class="cards">
-            <div class="card">
-                <img src="./assest/img/my_pic.jpeg" alt="sellers img">
-                <div class="text">
-                    <h3>Ramadan</h3>
-                    <span>15.2k</span>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assest/img/my_pic.jpeg" alt="sellers img">
-                <div class="text">
-                    <h3>Ramadan</h3>
-                    <span>15.2k</span>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="./assest/img/my_pic.jpeg" alt="sellers img">
-                <div class="text">
-                    <h3>Ramadan</h3>
-                    <span>15.2k</span>
-                </div>
-            </div>
+      <h2>Best Sellers</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="./assest/img/my_pic.jpeg" alt="sellers img" />
+          <div class="text">
+            <h3>Ramadan</h3>
+            <span>15.2k</span>
+          </div>
         </div>
+
+        <div class="card">
+          <img src="./assest/img/my_pic.jpeg" alt="sellers img" />
+          <div class="text">
+            <h3>Ramadan</h3>
+            <span>15.2k</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./assest/img/my_pic.jpeg" alt="sellers img" />
+          <div class="text">
+            <h3>Ramadan</h3>
+            <span>15.2k</span>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
-            <div class="footer__left">
-                <div class="footer__text">
-                    create,Explore & Collect
-                    Abstract NFTs
-                </div>
-            </div>
-                
-            <div class="footer__right">
-                <div class="footer__links">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Cooperation</a>
-                    <a href="#">Sponsorship</a>
-                    <a href="#">Contact Us</a>
-                </div>
+      <div class="footer__left">
+        <div class="footer__text">create,Explore & Collect Abstract NFTs</div>
+      </div>
 
-                <div class="footer__icons">
-                    <a href="https://www.facebook.com/rmdan.ms.wd.238407"><i class="ri-facebook-box-fill"></i></a>
-                    <a href="http://linkedin.com/in/رمضان-مسعود-19aa802bb"><i class="ri-linkedin-fill"></i></i></a>
-                    <a href="#"><i class="ri-instagram-line"></i></a>
+      <div class="footer__right">
+        <div class="footer__links">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Cooperation</a>
+          <a href="#">Sponsorship</a>
+          <a href="#">Contact Us</a>
+        </div>
 
-                </div>
+        <div class="footer__icons">
+          <a href="https://www.facebook.com/rmdan.ms.wd.238407"
+            ><i class="ri-facebook-box-fill"></i
+          ></a>
+          <a href="www.linkedin.com/in/رمضان-مسعود-19aa802bb"
+            ><i class="ri-linkedin-fill"></i
+          ></a>
+          <a href="#"><i class="ri-instagram-line"></i></a>
+        </div>
 
-                <div class="footer__copyright">
-                    copyright &copy; 2025 Ramadan Masoud. All Right Reserved
-                </div>
-            
-            </div>
-        </footer>
-</body>
+        <div class="footer__copyright">
+          copyright &copy; 2025 Ramadan Masoud. All Right Reserved
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
-
