--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./assest/css/style.css" />
-    <title>Home | Ramadan Masoud</title>
+    <title>Sell RamadanGraph NFTs | Secure Wallet Connection & Marketplace</title>
   </head>
   <body>
     <nav>
